<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_credit_label_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_credit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/add_credit_label_name"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_credit_label_amount"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_credit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/add_credit_label_amount"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_credit_label_min_sum"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_credit_min_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/add_credit_label_min_sum"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_credit_label_min_pct"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_credit_min_pct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/add_credit_label_min_pct"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_credit_label_grace"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_credit_grace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/add_credit_label_grace"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_credit_label_due"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_credit_due"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/add_credit_label_due"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_credit_label_fee_sum"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_credit_fee_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/add_credit_label_fee_sum"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_credit_label_fee_pct"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_credit_fee_pct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/add_credit_label_fee_pct"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_credit_label_interest_type"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_credit_interest_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/add_credit_label_interest_type"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_credit_label_interest"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_credit_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:hint="@string/add_credit_label_interest"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btn_save_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_save_credit" />

    </LinearLayout>
</ScrollView>
