<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#192E45">

    <!-- Toolbar back-ikonilla -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_others"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#192E45"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        android:contentDescription="@string/back"
        app:title="@string/others"
        app:titleCentered="true"
        app:titleTextColor="@android:color/white"/>

    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#444444"/>

    <!-- Lisää/Muokkaa -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_add_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_others"/>

        <View android:layout_width="1dp" android:layout_height="match_parent" android:background="#444444"/>

        <Button
            android:id="@+id/btn_edit_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_others"/>
    </LinearLayout>

    <!-- Kortit -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">
        <LinearLayout
            android:id="@+id/ll_container_others"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
</LinearLayout>
